(executables
 (names server client)
 (public_names scrabblos-server scrabblos-client)
 (libraries
        yojson
        ppx_deriving_yojson.runtime
        ppx_deriving.runtime
        lwt lwt_ppx lwt.unix
        hex
        hacl) 
 (preprocess (pps ppx_deriving_yojson ppx_deriving.std lwt_ppx)) 
)
