(executables
 (names main_server client printing_proxy)
 (public_names scrabblos-server scrabblos-client scrabblos-proxy)
 (libraries
        yojson
        ppx_deriving_yojson.runtime
        ppx_deriving.runtime
        lwt lwt_ppx lwt.unix
        hex
        hacl) 
 (preprocess (pps ppx_deriving_yojson ppx_deriving.std lwt_ppx)) 
)
